# Anipara

./: Cargo.toml  anipara.go  anipara.py  anissia.go  main.go  rename.go  rename_test.go  requirements.txt  setting.go  settings.yml  subtitle.go  test_title.txt
src/: main.rs
